src/App.css
html {font-size: 16px; box-sizing: border-box;}
body {background-color: #1a3a4c; margin: 0;}

button {cursor: pointer;}

.App {
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 1fr;
  grid-template-areas: 
  "header"
  "main"
  "footer";
  background-color: #ffffff;
  text-align: center;
  max-width: 414px;
  margin: 0 auto;
  height: 100vh;
}

.header {
  grid-area: header;
  height: 96px;
}

.main {
  grid-area: main;
  overflow-x: hidden;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 1fr;
  grid-template-areas: 
  "search"
  "feed"
  "post";
}

.search {
  grid-area: search;
  margin: 8px 0 8px 0;
}

.feed-container {
  grid-area: main;
  background-color: #ffffff;
  text-align: center;
  width: 100%;
  margin: 0;
  overflow: auto;
}

.act-feed {
  grid-area: feed;
  overflow: auto;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
.act-feed::-webkit-scrollbar {
  display: none;
}

.post {
  grid-area: post;
  margin: 8px 0;
}

.footer {
  grid-area: footer;
  text-align: center;
  width: 100%;
  margin-top: 8px;
  background-color: #ffffff;
}

.nav-bar {
  width: calc(100% - 32px);
  display: flex;
  margin: auto;
  justify-content: space-between;
  align-items:center;
  
  padding: 16px 16px;
  background: #4892bc;  
}

.avatar {
  height: 56px;
}

.main-menu {
  display: flex;
  align-items: center;
  padding-inline: 8px;
  height: 48px;
  color: white;
}

.main-ext {
  grid-column: 1 / 4;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 8px;
}

.main::-webkit-scrollbar {
  display: none;
}

.stretched {
  margin-top: 8px;
  height: 672px;
}

/* -------- Feed Styling ------------------------------------------------------------ */
/* .act-feed {
  display: flex; flex-flow: column nowrap; overflow: scroll auto; row-gap: 4px;
} */

.act-container {
  position: relative;
  display: flex;
  width: calc(100% - 48px);
  background-color: #dde6eb;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  padding: 8px;
  margin: 16px;
  justify-content: stretch;
  align-items: stretch;
}

.act-info {
  display: grid;
  grid-template-rows: 2fr 1fr;
  max-height: 100%;
  width: 100%;
  align-content: stretch;
  padding: 0 8px;
}

.act-title {
  align-self: flex-start;
}

.act-avatars {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  padding: 0 8px;
  bottom: 0;
}

.act-pic {
  height: 110px;
  border-radius: 5px;
}

.act-comment {
  height: 22px;
}

.act-avatar {
  height: 32px;
}
/* ------------------------------------------------------------------------------- */

.blue-btn {
  font-weight: bold;
  text-align: center;
  background-color: #354787;
  color: #ffffff;
  border-radius: 8px;
  cursor: pointer;
}

.blue-btn-sm {
  font-weight: bold;
  text-align: center;
  background-color: #354787;
  color: #ffffff;
  border-radius: 8px;
}

.small {
  height: 32px;
  width: 80px;
  font-size: 14pt;
}

.large {
  height: 48px;
  width: 176px;
  font-size: 18pt;
}

/* -------- Search Bar Styling ---------------------------------------------------- */
.search-form {
  max-width: 350px;
  margin: auto;
  height: 30px;
}

.search-input {
  width: 80%;
  height: 100%;
  float: left;
  color: #121212;
  background-color: #ffffff;
  font-size: 14pt;
  text-align: center;
  border: 0.5px solid rgba(0, 0, 0, 0.5);
  border-radius: 8px 0 0 8px;
  padding: 0;
}

.search-button {
  width: 19%;
  height: 100%;
  margin: auto;
  background-color: #354787;
  float: left;
  border-radius: 0 8px 8px 0;
  padding: 0;
}

/* -------------------------------------------------------------------------------- */

/* -------- Scroll Menu Styling ---------------------------------------------------- */
.scroll-menu {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  column-gap: 8px;
  background-color: #ffffff;
  margin: 16px 8px 0 8px;
}

.scroll-cat {
  display: flex;
  flex-direction: column;
  flex: 0 0 auto;
  height: 64px;
  width: 64px;
  font-size: 10pt;
  background-color: #eef3ff;
  color: #121212;
  align-items: center;
  justify-content: center;
}

.cat-pic {
  height: 32px;
}
/* ------------------------------------------------------------------------------- */

h2 {
  color: #eef3ff;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

/* -------- Post Form Styling ---------------------------------------------------- */

.form-entry {
  width: 100%;
  color: #121212;
  background-color: #ffffff;
  font-size: 1rem;
  text-align: left;
  display: flex;
  flex-direction: column;
  padding: 12px 0px 12px 0px;
}

.form-input {
  width: 88%;
  height: 32px;
  border-radius: 6px;
  border-color: rgba(0, 0, 0, 0.25);
  align-self: center;
}

.form-label {
  margin-left: 12px;
  padding: 0px 0px 4px 0px;
}

.form-input::placeholder {
  font-style: italic;
  font-size: 1rem;
  padding: 0 8px;
}

.date-entry {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 120px;
  justify-content: space-between;
}

.date-field {
  width: 40%;
}

.date-input {
  width: 88%;
  height: 32px;
  border-radius: 6px;
  border-color: rgba(0, 0, 0, 0.25);
  text-align: center;
}

.date-label {
  margin-left: 12px;
  padding: 0px 0px 4px 0px;
}


.date-input { display: inline-block;}

.date-input[type="datetime-local"] {
  font-style: italic;
  font-size: 0.675rem;
  padding: 0 8px;
}

.text-area-div {
  display: flex;
  flex-direction: column;
  padding-bottom: 16px;
}

.text-area {
  width: 88%;
  height: 15vh;
  border-radius: 6px 6px 0px 0px;
  margin: 12px 0px 0px 0px;
  background-color: rgba(0, 0, 0, 0.29);
  align-self: center;
  border: none;
  resize: none;
}

.text-area::placeholder {
  font-family: Arial, Helvetica, sans-serif;
  font-style: italic;
  color: white;
  padding: 8px 8px;
  font-size: 1rem;
}

.tags {
  height: 40px;
  width: 99%;
  display: flex;
  flex-direction: row;
  align-self: center;
  border-radius: 6px;
  padding-left: 4px;
  border: 1px solid rgba(0, 0, 0, 0.3);
}

.tags-btn {
  display: flex;
  background-color: #354787;
  color: white;
  height: 32px;
  width: 32px;
  border-radius: 8px;
  border: none;
  margin: auto;
  align-items: center;
  justify-content: center;
}

.tags-label {
  margin-left: 8px;
  align-self: center;
  color: rgba(0, 0, 0, 0.6);
}

.tags-field {
  margin-left: 8px;
  height: 32px;
  align-self: center;
  border-left: 1px solid rgba(0, 0, 0, 0.3);
  border-right: none;
  border-top: none;
  border-bottom: none;
  background-color: rgba(0, 0, 0, 0);
  width: 100%;
}

.required {
  color: gray;
  font-size: 1rem;
  font-style: italic;
  text-align: left;
 
}

.attached {
  display: flex;
  flex-direction: column;
  width: 99%;
  font-size: 0.9rem;
  text-align: left;
  margin-bottom: 32px;
}

.pin {
  border: 0 solid black;
  height: 32px;
  width: 32px;
}

.post-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 8px;
}

.black-btn {
  font-weight: bold;
  text-align: center;
  background-color: #000000;
  color: #ffffff;
  border-radius: 8px;
  cursor: pointer;
}

